--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 		</div>
 		<div id="content">
 			<p>here is the content</p>
-		</div>
+		</div><!-- end content -->
 		<div id="sidebar">
 			<p>here is the sidebar</p>
-		</div>
+		</div><!-- end sidebar -->
 		<div id="footer">
 			here is the footer
-		</div>
+		</div><!-- end footer -->
 	</div>
 </body>
 </html>
