--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" manifest="offline.manifest">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport"  content="width=device-width,initial-scale=1.0" />
 <title>And the winner isn't…</title>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script>document.cookie='resolution='+Math.max(screen.width,screen.height)+'; path=/';</script>
 <link href="css/main.css" rel="stylesheet" type="text/css" />
 </head>
@@ -28,9 +28,10 @@
 	<!-- the content -->
 	<div id="content">
 		<img class="oscarMain" src="img/oscar.png" alt="atwi_oscar"/>
-		<h1>Every year <span>when I watch the Oscars I'm annoyed...</span></h1>
-		<p>that films like King Kong, Moulin Rouge and Munich get the statue whilst the real cinematic heroes lose out. Not very Hollywood is it?</p>
-		<p>We’re here to put things right. </p>
+		<h1>Every year <em>when I watch the Oscars I'm annoyed...</em></h1>
+		<p>that films like <b>King Kong</b>, <b>Moulin Rouge</b> and <b>Munich</b> get the statue whilst the real cinematic heroes lose out. Not very Hollywood is it?</p>
+		<i><p>We’re here to put things right. </p></i>
+	<!--	<video src="video/myVideo.mp4" controls>What, do you mean you don't understand HTML5?</video> -->
 	<a href="#">these should have won &raquo;</a>
 	</div>
 	<!-- the sidebar -->
